    - remove rounded corners as they don't play well with nautilus showing up
      desktop and non black panel theme.
    - change blue grey scheme by orange grey
    - change gdm assets and background. Theme it aubergine instead of
      a wallpaper as it matches the boot sequence, and can't be easily changed
      by the user.
    - ensure lock screen matches gdm and shell theming.
  * Theme new assets on build (close and toggle buttons)
  * Add upstream high contrast theme to ubuntu mode. This will default to
    adwaita with upstream colors for accessibility.
  * debian/patches/50_add_ubuntu_desktop_detect.patch:
    - add caching for desktop detection to avoid querying the current desktop
      env variable as iterate through the list each time. For the time of the
      Shell process, we can expect this env variable to stay stable.
  * debian/patches/ubuntu_background_login.patch:
    - Change default background color as we modified the default GDM color
      for our ubuntu session. Change it as well here, still applying the
      background noise loading.
      This screen is appearing for a slip second when the Shell is loading.

 -- Didier Roche <didrocks@ubuntu.com>  Thu, 31 Aug 2017 13:26:28 +0200

gnome-shell (3.25.91-0ubuntu2) artful; urgency=medium

  * debian/rules:
    - Don't use variable when passing libexecdir for meson build
    - Change --list-missing to --fail-missing to catch this kind of problem

 -- Jeremy Bicha <jbicha@ubuntu.com>  Fri, 01 Sep 2017 10:38:12 -0400

gnome-shell (3.25.91-0ubuntu1) artful; urgency=medium

  [ Jeremy Bicha ]
  * New upstream release (LP: #1712800)
  * Build with meson
  * debian/control.in:
    - Build-depend on libasound2-dev
    - Bump minimum libglib2.0-dev to 2.53.0
    - Update dependencies for mutter 3.25.90
  * debian/rules:
    - Drop disable-new-dtags flag, no longer needed
    - Drop dh_girepository override, doesn't work with meson
      and apparently not needed
  * Refresh patches