@@ -17,38 +17,9 @@
  * along with this program; if not, write to the Free Software Foundation,
  * Inc., 51 Franklin St - Fifth Floor, Boston, MA 02110-1301 USA.
  */
-/* Based on gnome-shell.css 3.25.91
-   Can be easily rebased with:
-$ meld <gnome-shell-3.24.3>/data/theme/gnome-shell.css data/theme/gnome-shell.css debian/ubuntu-session-mods/ubuntu.css
-New changes are visible between the 2 first columns */
-dummy {
-  /* background color for most of UI elemnents like background of dialogs, shell, OSD, also, main button color */
-  background-color: #3f3e39;
-  /* submenu background on main color */
-  background-color: #3a3a34;
-  /* separators in system panels */
-  background-color: #2c2c28;
-  /* lighter border */
-  background-color: #e95420;
-  /* orange selection */
-  background-color: #dd4814;
-  /* darker (borders) orange, equivalent to rgb(187, 62, 17) */
-  background-color: #bb3e11;
-  /* hover buttons */
-  background-color: rgba(238, 238, 236, 0.1);
-  /* modal dialogs borders, workspace switcher… */
-  background-color: rgba(238, 238, 236, 0.2);
-  /* note: a lot of variations of alpha around 238, 238, 236, following the shell */
-  /* example: search entry icon: default (not hover) */
-  color: rgba(238, 238, 236, 0.7);
-  /* hovered is mostly white, like all active text */
-  color: #eeeeec;
-  /* lockscreen color */
-  color: #2c001e;
-}
 
 stage {
-  font-family: Ubuntu, Cantarell, Sans-Serif;
+  font-family: Cantarell, Sans-Serif;
   font-size: 11pt;
   color: #eeeeec; }
 
@@ -206,12 +177,12 @@ StScrollBar {
 .toggle-switch-us {
   background-image: url("resource:///org/gnome/shell/theme/toggle-off-us.svg"); }
   .toggle-switch-us:checked {
-    background-image: url("ubuntu-toggle-on-us.svg"); }
+    background-image: url("resource:///org/gnome/shell/theme/toggle-on-us.svg"); }
 
 .toggle-switch-intl {
   background-image: url("resource:///org/gnome/shell/theme/toggle-off-intl.svg"); }
   .toggle-switch-intl:checked {
-    background-image: url("ubuntu-toggle-on-intl.svg"); }
+    background-image: url("resource:///org/gnome/shell/theme/toggle-on-intl.svg"); }
 
 /* links */
 .shell-link {
@@ -605,8 +576,7 @@ StScrollBar {
 
 .switcher-list .item-box:outlined {
   padding: 6px;
-  border: 2px solid #e95420;
-  color: #dd4814; }
+  border: 2px solid #e95420; }
 
 .switcher-list .item-box:selected {
   background-color: #e95420;
@@ -676,6 +646,15 @@ StScrollBar {
   background-color: rgba(187, 62, 17, 0.5);
   border: 1px solid #dd4814; }
 
+.tile-preview-left.on-primary {
+  border-radius: 6px 6px 0 0; }
+
+.tile-preview-right.on-primary {
+  border-radius: 0 6px 0 0; }
+
+.tile-preview-left.tile-preview-right.on-primary {
+  border-radius: 6px 6px 0 0; }
+
 /* TOP BAR */
 #panel {
   background-color: rgba(0, 0, 0, 0.2);
@@ -683,16 +662,21 @@ StScrollBar {
   transition-duration: 500ms;
   font-weight: bold;
   height: 1.86em; }
+  #panel.unlock-screen, #panel.login-screen, #panel.lock-screen {
+    background-color: transparent; }
   #panel #panelLeft, #panel #panelCenter {
     spacing: 4px; }
   #panel .panel-corner {
     -panel-corner-radius: 6px;
-    -panel-corner-background-color: transparent;
+    -panel-corner-background-color: rgba(0, 0, 0, 0.2);
     -panel-corner-border-width: 2px;
     -panel-corner-border-color: transparent; }
     #panel .panel-corner:active, #panel .panel-corner:overview, #panel .panel-corner:focus {
-      -panel-corner-border-color: #e95420;
-      -panel-corner-radius: 0; }
+      -panel-corner-border-color: #e95420; }
+    #panel .panel-corner.lock-screen, #panel .panel-corner.login-screen, #panel .panel-corner.unlock-screen {
+      -panel-corner-radius: 0;
+      -panel-corner-background-color: transparent;
+      -panel-corner-border-color: transparent; }
   #panel .panel-button {
     -natural-hpadding: 12px;
     -minimum-hpadding: 6px;
@@ -743,13 +727,11 @@ StScrollBar {
   #panel .screencast-indicator {
     color: #f57900; }
   #panel.solid {
-    background-gradient-direction: vertical;
-    background-gradient-start: #58554d;
-    background-gradient-end: #3f3e39;
+    background-color: black;
     /* transition from transparent to solid */
     transition-duration: 300ms; }
     #panel.solid .panel-corner {
-      -panel-corner-background-color: transparent; }
+      -panel-corner-background-color: black; }
     #panel.solid .panel-button {
       color: #ccc;
       text-shadow: none; }
@@ -921,9 +903,6 @@ StScrollBar {
   margin: 1.5em 1.5em 0; }
   .message-list-clear-button.button:hover, .message-list-clear-button.button:focus {
     background-color: rgba(238, 238, 236, 0.1); }
-  .message-list-clear-button.button:active {
-    background-color: #dd4814
-  }
 
 .message-list-sections {
   spacing: 1em; }
@@ -945,7 +924,7 @@ StScrollBar {
 .message-icon-bin > StIcon {
   color: #bebeb6;
   icon-size: 16px;
-  /*-st-icon-style: symbolic;*/ }
+}
 
 .message-secondary-bin {
   padding: 0 12px; }
@@ -1042,7 +1021,7 @@ StScrollBar {
   icon-size: 1.09em; }
 
 .window-close {
-  background-image: url("ubuntu-close-window.svg");
+  background-image: url("resource:///org/gnome/shell/theme/close-window.svg");
   background-size: 32px;
   height: 32px;
   width: 32px; }
@@ -1628,12 +1607,14 @@ StScrollBar {
     padding: 3px 18px; }
     .login-dialog .modal-dialog-button:default {
       color: #eeeeec;
+      background-color: #333332;
+      border-color: rgba(0, 0, 0, 0.7);
       box-shadow: inset 0 1px #4f5245;
       text-shadow: 0 1px black;
       icon-shadow: 0 1px black; }
       .login-dialog .modal-dialog-button:default:hover, .login-dialog .modal-dialog-button:default:focus {
         color: white;
-        border-color: #e95420;
+        border-color: #E95320;
         background-color: #333332;
         box-shadow: inset 0 1px #6d5d69;
         text-shadow: 0 1px black;
@@ -1796,20 +1777,23 @@ StScrollBar {
 .screen-shield-notification-count-text {
   padding: 0px 0px 0px 12px; }
 
-.screen-shield-background {
+#panel.lock-screen {
+  background-color: rgba(52, 54, 46, 0.5); }
+
+  .screen-shield-background {
   background: black;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4); }
 
 #lockDialogGroup {
-  background: #2c001e;
-}
+  background: #2c001e url(resource:///org/gnome/shell/theme/noise-texture.png);
+  background-repeat: repeat; }
 
 #screenShieldNotifications StButton#vhandle, #screenShieldNotifications StButton#hhandle {
   background-color: rgba(63, 63, 57, 0.3); }
   #screenShieldNotifications StButton#vhandle:hover, #screenShieldNotifications StButton#vhandle:focus, #screenShieldNotifications StButton#hhandle:hover, #screenShieldNotifications StButton#hhandle:focus {
     background-color: rgba(63, 63, 57, 0.5); }
   #screenShieldNotifications StButton#vhandle:active, #screenShieldNotifications StButton#hhandle:active {
-    background-color: rgba(33, 93, 156, 0.5); }
+    background-color: #333332; }
 
 #LookingGlassDialog {
   background-color: rgba(0, 0, 0, 0.8);
@@ -1890,3 +1874,98 @@ StScrollBar {
   border: 2px solid grey;
   border-radius: 4px;
   padding: 6px; }
+
+/*
+ * Ubuntu Theme additional modifications and overrides
+ */
+
+/* default ubuntu font */
+stage {
+  font-family: Ubuntu, Cantarell, Sans-Serif;
+}
+
+/* switch colors */
+.toggle-switch-us:checked {
+  background-image: url("ubuntu-toggle-on-us.svg");
+}
+.toggle-switch-intl:checked {
+  background-image: url("ubuntu-toggle-on-intl.svg");
+}
+
+/* font color in switcher */
+.switcher-list .item-box:outlined {
+  color: #dd4814;
+}
+
+/* no radius on tile preview */
+.tile-preview-left.on-primary {
+  border-radius: 0;
+}
+.tile-preview-right.on-primary {
+  border-radius: 0;
+}
+.tile-preview-left.tile-preview-right.on-primary {
+  border-radius: 0;
+}
+
+/* our unlock screen isn't fully transparent */
+#panel.unlock-screen, #panel.login-screen, #panel.lock-screen {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+/* no border radius in panel */
+#panel .panel-corner {
+  -panel-corner-background-color: transparent;
+}
+#panel .panel-corner:active, #panel .panel-corner:overview, #panel .panel-corner:focus {
+  -panel-corner-radius: 0;
+}
+/* panel color */
+#panel.solid {
+  background-gradient-direction: vertical;
+  background-gradient-start: #58554d;
+  background-gradient-end: #3f3e39;
+}
+#panel.solid .panel-corner {
+  -panel-corner-background-color: transparent;
+}
+
+/* active buttons are highlighted */
+.message-list-clear-button.button:active {
+  background-color: #dd4814
+}
+
+/* window close ubuntu image */
+.window-close {
+  background-image: url("ubuntu-close-window.svg");
+}
+
+/* Based on gnome-shell.css 3.25.91
+   Can be easily rebased with:
+$ meld <gnome-shell-3.24.3>/data/theme/gnome-shell.css data/theme/gnome-shell.css debian/ubuntu-session-mods/ubuntu.css
+New changes are visible between the 2 first columns */
+dummy {
+  /* background color for most of UI elemnents like background of dialogs, shell, OSD, also, main button color */
+  background-color: #3f3e39;
+  /* submenu background on main color */
+  background-color: #3a3a34;
+  /* separators in system panels */
+  background-color: #2c2c28;
+  /* lighter border */
+  background-color: #e95420;
+  /* orange selection */
+  background-color: #dd4814;
+  /* darker (borders) orange, equivalent to rgb(187, 62, 17) */
+  background-color: #bb3e11;
+  /* hover buttons */
+  background-color: rgba(238, 238, 236, 0.1);
+  /* modal dialogs borders, workspace switcher… */
+  background-color: rgba(238, 238, 236, 0.2);
+  /* note: a lot of variations of alpha around 238, 238, 236, following the shell */
+  /* example: search entry icon: default (not hover) */
+  color: rgba(238, 238, 236, 0.7);
+  /* hovered is mostly white, like all active text */
+  color: #eeeeec;
+  /* lockscreen color */
+  color: #2c001e;
+}
